[gd_scene load_steps=9 format=3 uid="uid://dm7xqpfkbq5ya"]

[ext_resource type="Script" path="res://scripts/levels/main_level.gd" id="1_main_level"]
[ext_resource type="PackedScene" uid="uid://bpwxc2r4yq8kt" path="res://scenes/ui/hud.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://dhqp8x3y5m6la" path="res://scenes/ui/spawn_menu.tscn" id="3_spawn_menu"]
[ext_resource type="PackedScene" uid="uid://cwave_info_panel" path="res://scenes/ui/wave_info_panel.tscn" id="4_wave_info"]
[ext_resource type="PackedScene" uid="uid://btower_info_panel" path="res://scenes/ui/tower_info_panel.tscn" id="5_tower_info"]
[ext_resource type="PackedScene" uid="uid://csell_confirmation" path="res://scenes/ui/sell_confirmation.tscn" id="6_sell_confirm"]
[ext_resource type="PackedScene" uid="uid://bresource_bar" path="res://scenes/ui/resource_bar.tscn" id="7_resource_bar"]
[ext_resource type="PackedScene" uid="uid://b8qvk4u7h3xvl" path="res://scenes/ui/evolution_menu.tscn" id="8_evolution_menu"]

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_main_level")

[node name="Background" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 1152.0
color = Color(0.15, 0.18, 0.12, 1)

[node name="Grid" type="Node2D" parent="."]

[node name="Towers" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_hud")]

[node name="ResourceBar" parent="UI" instance=ExtResource("7_resource_bar")]

[node name="SpawnMenu" parent="UI" instance=ExtResource("3_spawn_menu")]

[node name="WaveInfoPanel" parent="UI" instance=ExtResource("4_wave_info")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 210.0
grow_horizontal = 0

[node name="TowerInfoPanel" parent="UI" instance=ExtResource("5_tower_info")]

[node name="EvolutionMenu" parent="UI" instance=ExtResource("8_evolution_menu")]

[node name="SellConfirmation" parent="UI" instance=ExtResource("6_sell_confirm")]
